pkg/cap/msg/errors/example/ue/consts.i18n.go
// generated by cap, DO NOT EDIT.
package ue

import (
	"fmt"

	"github.com/hoorayui/core-framework/pkg/cap/msg/i18n"
	"golang.org/x/text/language"
)

// supported languages:
var (
	Lang_zhCN       = language.Make("zh-CN")
	Lang_enUS       = language.Make("en-US")
	languageMatcher = language.NewMatcher([]language.Tag{Lang_zhCN, Lang_enUS})
)

// language matcher
func MatchLang(lang string) (tag language.Tag, err error) {
	langTag := language.Make(lang)
	matchedTag, _, c := languageMatcher.Match(langTag)
	if c < language.High {
		return matchedTag, fmt.Errorf("no confidence language matched")
	}
	return matchedTag, nil
}

// language id definitions:
// ERR_INVALID_USER_NAME_PASSWORD 用户名或密码错误
const ERR_INVALID_USER_NAME_PASSWORD = i18n.TrID("v_ERR_INVALID_USER_NAME_PASSWORD")

// ERR_RECORD_1 删除记录索引失败
const ERR_RECORD_1 = i18n.TrID("v_ERR_RECORD_1")

// ERR_RECORD_10 根据条件查询记录信息总行数失败
const ERR_RECORD_10 = i18n.TrID("v_ERR_RECORD_10")

// ERR_RECORD_11 根据记录ID[%d/%s]删除记录信息失败
const ERR_RECORD_11 = i18n.TrID("v_ERR_RECORD_11")

// ERR_RECORD_12 根据记录ID[%d/%s]更新记录信息失败
const ERR_RECORD_12 = i18n.TrID("v_ERR_RECORD_12")

// ERR_RECORD_13 创建记录信息失败
const ERR_RECORD_13 = i18n.TrID("v_ERR_RECORD_13")

// ERR_RECORD_14 根据记录ID[%d]分表失败
const ERR_RECORD_14 = i18n.TrID("v_ERR_RECORD_14")

// ERR_RECORD_2 创建记录表[%s]失败
const ERR_RECORD_2 = i18n.TrID("v_ERR_RECORD_2")

// ERR_RECORD_3 查询所有记录索引信息失败
const ERR_RECORD_3 = i18n.TrID("v_ERR_RECORD_3")

// ERR_RECORD_4 更新记录索引[%s]失败
const ERR_RECORD_4 = i18n.TrID("v_ERR_RECORD_4")

// ERR_RECORD_5 根据时间[%s]查询记录索引信息失败
const ERR_RECORD_5 = i18n.TrID("v_ERR_RECORD_5")

// ERR_RECORD_6 创建记录表[%s]索引信息失败
const ERR_RECORD_6 = i18n.TrID("v_ERR_RECORD_6")

// ERR_RECORD_7 根据条件查询索引信息失败
const ERR_RECORD_7 = i18n.TrID("v_ERR_RECORD_7")

// ERR_RECORD_8 根据记录ID[%d/%s]查找记录信息失败
const ERR_RECORD_8 = i18n.TrID("v_ERR_RECORD_8")

// ERR_RECORD_9 根据条件查询记录信息失败
const ERR_RECORD_9 = i18n.TrID("v_ERR_RECORD_9")

// ERR_SESSION_EXPIRED 会话过期，请重新登陆
const ERR_SESSION_EXPIRED = i18n.TrID("v_ERR_SESSION_EXPIRED")

// ERR_TEST_1 错误一
const ERR_TEST_1 = i18n.TrID("v_ERR_TEST_1")

// ERR_TEST_2 错误二 %d, %s
const ERR_TEST_2 = i18n.TrID("v_ERR_TEST_2")
